[gd_scene load_steps=13 format=3 uid="uid://dsrnsuhn6mmrq"]

[ext_resource type="Script" uid="uid://deawhevcgsq6k" path="res://cenas/abert.gd" id="1_0vgyr"]
[ext_resource type="Shader" uid="uid://7ver7822au4k" path="res://cenas/fog2.gdshader" id="6_3jgyd"]
[ext_resource type="Texture2D" uid="uid://c2v3sn3r72pqo" path="res://sirpeidafundo.png" id="6_bhvw8"]
[ext_resource type="AudioStream" uid="uid://dasrtm628hlr3" path="res://bleep.sfxr" id="117_608tj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g6klm"]
shader = ExtResource("6_3jgyd")
shader_parameter/color = Color(0.8334253, 0.24426319, 0.6393854, 0.32156864)
shader_parameter/OCTAVES = 9
shader_parameter/enable_pixelation = true
shader_parameter/pixelation_amount = 54
shader_parameter/fog_direction = Vector2(1, 1)
shader_parameter/scroll_noise_tex = true
shader_parameter/noise_scroll_direction = Vector2(0.4, 0.1)

[sub_resource type="Environment" id="Environment_0vgyr"]
background_mode = 3
background_energy_multiplier = 3.8
background_canvas_max_layer = 5
ambient_light_source = 1
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.0
glow_enabled = true
glow_intensity = 0.14
glow_strength = 1.53
glow_bloom = 0.15
glow_hdr_threshold = 1.57
glow_hdr_luminance_cap = 75.45
adjustment_enabled = true
adjustment_brightness = 0.99
adjustment_contrast = 1.05
adjustment_saturation = 1.06

[sub_resource type="Gradient" id="Gradient_bhvw8"]
offsets = PackedFloat32Array(0.39534885, 0.7627907, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_l8342"]
gradient = SubResource("Gradient_bhvw8")
fill = 1
fill_from = Vector2(0.534, 0.5)
fill_to = Vector2(0.56837606, 0.047008548)

[sub_resource type="Animation" id="Animation_v1d1r"]
resource_name = "luz"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5666666, 2.9333334),
"transitions": PackedFloat32Array(1, 0.5358865, 8.574185),
"update": 0,
"values": [Vector2(114, -48.999992), Vector2(103.00001, -45.999996), Vector2(114, -48.999992)]
}

[sub_resource type="Animation" id="Animation_1yycb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(114, -48.999992)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jdavq"]
_data = {
&"RESET": SubResource("Animation_1yycb"),
&"luz": SubResource("Animation_v1d1r")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bhvw8"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 5

[node name="main" type="Node2D"]
modulate = Color(0.9764706, 1, 0.70980394, 1)
self_modulate = Color(18.892157, 18.892157, 18.892157, 1)
light_mask = 0
texture_filter = 1
position = Vector2(0, -1)
script = ExtResource("1_0vgyr")

[node name="ColorRect2" type="ColorRect" parent="."]
anchors_preset = -1
offset_left = -34.0
offset_top = -119.0
offset_right = 258.0
offset_bottom = 84.0
color = Color(0.12107168, 0.039254602, 0.12107168, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect2"]
layout_mode = 0
offset_left = 233.0
offset_top = 1.0
offset_right = 286.0
offset_bottom = 41.0
theme_override_colors/default_color = Color(0.9372549, 0.6745098, 0.13333334, 1)
theme_override_font_sizes/normal_font_size = 9
text = "versao: 0.5a"

[node name="RichTextLabel2" type="RichTextLabel" parent="ColorRect2"]
layout_mode = 0
offset_left = 132.0
offset_top = 184.0
offset_right = 163.0
offset_bottom = 224.0
theme_override_colors/default_color = Color(0.9372549, 0.6745098, 0.13333334, 1)
theme_override_font_sizes/normal_font_size = 9
text = "By ZeD"

[node name="Sirpeidafundo" type="Sprite2D" parent="."]
position = Vector2(112, -36)
scale = Vector2(0.17016806, 0.17016806)
texture = ExtResource("6_bhvw8")

[node name="ColorRect" type="ColorRect" parent="."]
self_modulate = Color(1, 1, 1, 0.39215687)
z_index = 8
texture_filter = 1
material = SubResource("ShaderMaterial_g6klm")
anchors_preset = -1
offset_left = -33.0
offset_top = -120.0
offset_right = 258.0
offset_bottom = 86.0
mouse_filter = 2
color = Color(0.3647059, 0.3647059, 0.3647059, 0.54509807)
metadata/_edit_lock_ = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(112, -17)
zoom = Vector2(4.5, 4.5)
limit_smoothed = true
position_smoothing_enabled = true
rotation_smoothing_enabled = true
metadata/_edit_lock_ = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0vgyr")

[node name="bleep" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("117_608tj")
volume_db = 4.37
pitch_scale = 1.71

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(114, -48.999992)
scale = Vector2(2.15625, 1.453125)
texture = SubResource("GradientTexture2D_l8342")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jdavq")
}
autoplay = "luz"

[node name="conectar2" type="Button" parent="."]
anchors_preset = -1
offset_left = 87.0
offset_top = 26.0
offset_right = 138.2711
offset_bottom = 48.0
theme_override_colors/font_color = Color(0.9411765, 0.6745098, 0.13333334, 1)
theme_override_font_sizes/font_size = 10
theme_override_styles/normal = SubResource("StyleBoxFlat_bhvw8")
text = "Jogar"

[connection signal="focus_entered" from="conectar2" to="." method="_on_conectar_2_focus_entered"]
[connection signal="mouse_entered" from="conectar2" to="." method="_on_conectar_2_mouse_entered"]
[connection signal="pressed" from="conectar2" to="." method="_on_conectar_2_pressed"]
[connection signal="toggled" from="conectar2" to="." method="_on_conectar_2_toggled"]
